@@ -85,6 +85,10 @@ value is \fIvalue\fR.
 Specifies that the subtype attribute of the object should now be \fIsubtype\fR.
 If an empty string is given, the subtype is removed.
 .TP
+.B size <size>
+Specifies the size of a cache or NUMA node.
+The value may be suffixed with \fBkB\fR, \fBMB\fR, \fBGB\fR or \fBTB\fR.
+.TP
 .B misc <name>
 Specifies a new Misc object name.
 .TP
